# dict

./: .gitignore  .gitmodules  CMakeLists.txt  Dictionary.sln  Dictionary.vcxproj  Dictionary.vcxproj.filters  LICENSE  Makefile  README.md  dict.c  dict_test.c  main.c  test_output.txt
.github/workflows/: cmake.yml
cmake/: dict-config.cmake
include/dict/: dict.h
